--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Freelancer - Start Bootstrap</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <header>
+      <h1 class="header">START BOOTSTRAP</h1>
+      <h2 class="menu">PORTFOLIO</h2>
+      <h2 class="menu">ABOUT</h2>
+      <h2 class="menu">CONTACT</h2>
+    </header>
+
+    <main>
+      <h1>START BOOTSTRAP</h1>
+      <h2>Web Developer - Graphic Artist - User Experience Designer</h2>
+    </main>
+
+    <div class="portfolio">
+      <h1>PORTFOLIO</h1>
+      <img>
+    </div>
+
+    <div class="about">
+      <h1>ABOUT</h1>
+      <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+      <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+    </div>
+
+    <div class="contactMe">
+      <h1>CONTACT ME</h1>
+    </div>
+
+    <div class="last">
+
+    </div>
+
+    <footer>
+      <h1>Copyright © Your Website 2018</h1>
+    </footer>
+
+  </body>
+</html>
