--- a/index.html
+++ b/index.html
@@ -1,45 +1,88 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Freelancer - Start Bootstrap</title>
-    <link rel="stylesheet" href="css/main.css">
+      <meta charset="utf-8">
+      <title>Freelancer - Start Bootstrap</title>
+      <link rel="stylesheet" type="text/css" href="css/main.css">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="assets/icons/style.css">
   </head>
+
   <body>
-    <header>
-      <h1 class="header">START BOOTSTRAP</h1>
-      <h2 class="menu">PORTFOLIO</h2>
-      <h2 class="menu">ABOUT</h2>
-      <h2 class="menu">CONTACT</h2>
-    </header>
+      <nav class="navbar">
+        <a class="start" href="#page-top">START BOOTSTRAP</a>
+          <ul class="list">
+            <li>
+              <a class="menuPortfolio" href="#portfolio">PORTFOLIO</a>
+            </li>
+            <li>
+              <a class="menuAbout" href="#about">ABOUT</a>
+            </li>
+            <li>
+              <a class="menuContact" href="#contact">CONTACT</a>
+            </li>
+          </ul>
+      </nav>
 
-    <main>
-      <h1>START BOOTSTRAP</h1>
-      <h2>Web Developer - Graphic Artist - User Experience Designer</h2>
-    </main>
+      <header class="main">
+        <img src="assets/images/profile.png">
+        <p class="p1">START BOOTSTRAP</p>
+        <hr class="star">
+        <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
+      </header>
 
-    <div class="portfolio">
-      <h1>PORTFOLIO</h1>
-      <img>
-    </div>
+      <section class="portfolio">
+        <p>PORTFOLIO</p>
+        <hr>
+        <a href="#portfolio1"><img src="assets/images/portfolio/cabin.png"></a>
+        <a href="#portfolio2"><img src="assets/images/portfolio/cake.png"></a>
+        <a href="#portfolio3"><img src="assets/images/portfolio/circus.png"></a>
+        <a href="#portfolio4"><img src="assets/images/portfolio/game.png"></a>
+        <a href="#portfolio5"><img src="assets/images/portfolio/safe.png"></a>
+        <a href="#portfolio6"><img src="assets/images/portfolio/submarine.png"></a>
+      </section>
 
-    <div class="about">
-      <h1>ABOUT</h1>
-      <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-      <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-    </div>
+      <section class="about">
+        <p>ABOUT</p>
+        <hr class="star">
+        <div class="textLeft">
+          <p class="p1">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+        </div>
+        <div class="textRight">
+          <p class="p2">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        </div>
+      </section>
 
-    <div class="contactMe">
-      <h1>CONTACT ME</h1>
-    </div>
+      <section class="contactMe">
+        <p>CONTACT ME</p>
+        <hr class="star">
+        <form>FORM AQUI</form>
+      </section>
 
-    <div class="last">
+      <footer>
+        <div class="location">
+          <h4>LOCATION</h4>
+          <p>2215 John Daniel Drive
+            <br>Clark, MO 65243</p>
+        </div>
+        <div class="around">
+          <h4>AROUND THE WEB</h4>
+          <span class="icon-facebook"></span>
+          <span class="icon-google-plus"></span>
+          <span class="icon-twitter"></span>
+          <span class="icon-linkedin2"></span>
+          <span class="icon-dribbble"></span>
+        </div>
+        <div class="aboutFreelancer">
+          <h4>ABOUT FREELANCER</h4>
+          <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        </div>
+      </footer>
 
-    </div>
-
-    <footer>
-      <h1>Copyright © Your Website 2018</h1>
-    </footer>
+      <div class="copyright">
+        <p>Copyright © Your Website 2018</p>
+      </div>
 
   </body>
-</html>
+<html>
