--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/icons/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://file.myfontastic.com/jpVW59LhkJpEqujBD4J3bH/icons.css">
   </head>
 
   <body>
@@ -29,13 +30,13 @@
     <header>
       <img src="assets/images/profile.png">
       <p class="p1">START BOOTSTRAP</p>
-      <hr class="star">
+      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
       <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
     </header>
 
     <section class="portfolio">
-      <p>PORTFOLIO</p>
-      <hr>
+      <h2>PORTFOLIO</h2>
+      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
       <a href="#portfolio1"><img src="assets/images/portfolio/cabin.png"></a>
       <a href="#portfolio2"><img src="assets/images/portfolio/cake.png"></a>
       <a href="#portfolio3"><img src="assets/images/portfolio/circus.png"></a>
@@ -45,30 +46,32 @@
     </section>
 
     <section class="about">
-      <p>ABOUT</p>
-      <hr class="line"></hr><i class="fas fa-star"></i><hr class="line"></hr>
-      <div class="textLeft">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-      </div>
-      <div class="textRight">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+      <h2>ABOUT</h2>
+      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
+      <div class="text">
+        <div class="textLeft">
+          <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+        </div>
+        <div class="textRight">
+          <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        </div>
       </div>
     </section>
 
     <section class="contactMe">
-      <p>CONTACT ME</p>
-      <hr class="star">
+      <h2>CONTACT ME</h2>
+      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
       <form>FORM AQUI</form>
     </section>
 
     <footer>
       <div class="location">
-        <h4>LOCATION</h4>
+        <h2>LOCATION</h2>
         <p>2215 John Daniel Drive
           <br>Clark, MO 65243</p>
       </div>
       <div class="around">
-        <h4>AROUND THE WEB</h4>
+        <h2>AROUND THE WEB</h2>
         <span class="icon-facebook"></span>
         <span class="icon-google-plus"></span>
         <span class="icon-twitter"></span>
@@ -76,7 +79,7 @@
         <span class="icon-dribbble"></span>
       </div>
       <div class="aboutFreelancer">
-        <h4>ABOUT FREELANCER</h4>
+        <h2>ABOUT FREELANCER</h2>
         <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
       </div>
     </footer>
