--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <title>Freelancer - Start Bootstrap</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/icons/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://file.myfontastic.com/jpVW59LhkJpEqujBD4J3bH/icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/flaticon.css">
   </head>
 
   <body>
@@ -30,24 +28,26 @@
     <header>
       <img src="assets/images/profile.png">
       <p class="p1">START BOOTSTRAP</p>
-      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
+      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
       <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
     </header>
 
     <section class="portfolio">
       <h2>PORTFOLIO</h2>
-      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
-      <a href="#portfolio1"><img src="assets/images/portfolio/cabin.png"></a>
-      <a href="#portfolio2"><img src="assets/images/portfolio/cake.png"></a>
-      <a href="#portfolio3"><img src="assets/images/portfolio/circus.png"></a>
-      <a href="#portfolio4"><img src="assets/images/portfolio/game.png"></a>
-      <a href="#portfolio5"><img src="assets/images/portfolio/safe.png"></a>
-      <a href="#portfolio6"><img src="assets/images/portfolio/submarine.png"></a>
+      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <div class="images">
+        <a href="#"><img src="assets/images/portfolio/cabin.png"></a>
+        <a href="#"><img src="assets/images/portfolio/cake.png"></a>
+        <a href="#"><img src="assets/images/portfolio/circus.png"></a>
+        <a href="#"><img src="assets/images/portfolio/game.png"></a>
+        <a href="#"><img src="assets/images/portfolio/safe.png"></a>
+        <a href="#"><img src="assets/images/portfolio/submarine.png"></a>
+      </div>
     </section>
 
     <section class="about">
       <h2>ABOUT</h2>
-      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
+      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
       <div class="text">
         <div class="textLeft">
           <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
@@ -56,36 +56,59 @@
           <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
         </div>
       </div>
+      <div class="download">
+        <span class="flaticon-harddisk">Download Theme</span>
+      </div>
     </section>
 
     <section class="contactMe">
       <h2>CONTACT ME</h2>
-      <div><hr class="line"></hr><i class="icon-star"></i><hr class="line"></hr></div>
-      <form>FORM AQUI</form>
+      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <form>
+        <div class="contactTags">
+          <label>Name</label><br>
+          <input type="text">
+        </div>
+        <div class="contactTags">
+          <label>Email Address</label><br>
+          <input type="text">
+        </div>
+        <div class="contactTags">
+          <label>Phone Number</label><br>
+          <input type="text">
+        </div>
+        <div class="contactLastTag">
+          <label>Message</label><br>
+          <input type="text"><br>
+        </div>
+        <input class="button" type="button" value="Send">
+      </form>
     </section>
 
     <footer>
-      <div class="location">
-        <h2>LOCATION</h2>
-        <p>2215 John Daniel Drive
-          <br>Clark, MO 65243</p>
-      </div>
-      <div class="around">
-        <h2>AROUND THE WEB</h2>
-        <span class="icon-facebook"></span>
-        <span class="icon-google-plus"></span>
-        <span class="icon-twitter"></span>
-        <span class="icon-linkedin2"></span>
-        <span class="icon-dribbble"></span>
-      </div>
-      <div class="aboutFreelancer">
-        <h2>ABOUT FREELANCER</h2>
-        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+      <div class="footerItens">
+        <div class="location">
+          <h3>LOCATION</h2>
+          <p>3481 Melrose Place<br>
+          Beverly Hills, CA 90210</p>
+        </div>
+        <div class="around">
+          <h3>AROUND THE WEB</h2>
+          <i class="flaticon-facebook"></i>
+          <i class="flaticon-social-media"></i>
+          <i class="flaticon-twitter"></i>
+          <i class="flaticon-linkedin"></i>
+          <i class="flaticon-dribble-big-logo"></i>
+        </div>
+        <div class="aboutFreelancer">
+          <h3>ABOUT FREELANCER</h2>
+          <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        </div>
       </div>
     </footer>
 
     <div class="copyright">
-      <p>Copyright © Your Website 2018</p>
+      <p>Copyright © Your Website 2017</p>
     </div>
 
   </body>
