--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/flaticon.css">
   </head>
-
   <body>
     <nav>
       <a class="start" href="#page-top">START BOOTSTRAP</a>
@@ -24,14 +23,12 @@
         </li>
       </ul>
     </nav>
-
     <header>
       <img src="assets/images/profile.png">
       <p class="p1">START BOOTSTRAP</p>
       <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
       <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
     </header>
-
     <section class="portfolio">
       <h2>PORTFOLIO</h2>
       <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
@@ -44,7 +41,6 @@
         <a href="#"><img src="assets/images/portfolio/submarine.png"></a>
       </div>
     </section>
-
     <section class="about">
       <h2>ABOUT</h2>
       <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
@@ -60,7 +56,6 @@
         <span class="flaticon-harddisk">Download Theme</span>
       </div>
     </section>
-
     <section class="contactMe">
       <h2>CONTACT ME</h2>
       <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
@@ -81,10 +76,11 @@
           <label>Message</label><br>
           <input type="text"><br>
         </div>
-        <input class="button" type="button" value="Send">
+        <div class="button">
+          <input type="button" value="Send">
+        </div>
       </form>
     </section>
-
     <footer>
       <div class="footerItens">
         <div class="location">
@@ -106,10 +102,8 @@
         </div>
       </div>
     </footer>
-
     <div class="copyright">
       <p>Copyright © Your Website 2017</p>
     </div>
-
   </body>
 <html>
