Melhorias CSS - Versão Final 010718 1135

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </div>
       </div>
       <div class="download">
-        <span class="flaticon-harddisk">Download Theme</span>
+        <div class="downloadButton">
+          <span class="flaticon-harddisk">Download Theme</span>
+        </div>
       </div>
     </section>
     <section class="contactMe">
