--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <a class="start" href="#page-top">START BOOTSTRAP</a>
       <ul>
         <li>
-          <a class="menuPortfolio" href="#portfolio">PORTFOLIO</a>
+          <a class="menu" href="#portfolio">PORTFOLIO</a>
         </li>
         <li>
-          <a class="menuAbout" href="#about">ABOUT</a>
+          <a class="menu" href="#about">ABOUT</a>
         </li>
         <li>
-          <a class="menuContact" href="#contact">CONTACT</a>
+          <a class="menu" href="#contact">CONTACT</a>
         </li>
       </ul>
     </nav>
