--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     <footer>
       <div class="footerItens">
         <div class="location">
-          <h3>LOCATION</h2>
+          <h3>LOCATION</h3>
           <p>3481 Melrose Place<br>
           Beverly Hills, CA 90210</p>
         </div>
         <div class="around">
-          <h3>AROUND THE WEB</h2>
+          <h3>AROUND THE WEB</h3>
           <i class="flaticon-facebook"></i>
           <i class="flaticon-social-media"></i>
           <i class="flaticon-twitter"></i>
@@ -99,13 +99,13 @@
           <i class="flaticon-dribble-big-logo"></i>
         </div>
         <div class="aboutFreelancer">
-          <h3>ABOUT FREELANCER</h2>
+          <h3>ABOUT FREELANCER</h3>
           <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
         </div>
       </div>
     </footer>
     <div class="copyright">
-      <p>Copyright © Your Website 2017</p>
+      <h6>Copyright © Your Website 2017</h6>
     </div>
   </body>
 <html>
