--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </footer>
     <div class="copyright">
-      <h6>Copyright © Your Website 2017</h6>
+      <p>Copyright © Your Website 2017</p>
     </div>
   </body>
 <html>
