--- a/index.html
+++ b/index.html
@@ -26,24 +26,32 @@
     <header>
       <img src="assets/images/profile.png">
       <p class="p1">START BOOTSTRAP</p>
-      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <div><hr class="line"><i class="flaticon-star"></i><hr class="line"></div>
       <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
     </header>
     <section class="portfolio">
       <h2>PORTFOLIO</h2>
-      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <div>
+        <hr class="line">
+        <i class="flaticon-star"></i>
+        <hr class="line">
+      </div>
       <div class="images">
-        <a href="#"><img src="assets/images/portfolio/cabin.png"></a>
-        <a href="#"><img src="assets/images/portfolio/cake.png"></a>
-        <a href="#"><img src="assets/images/portfolio/circus.png"></a>
-        <a href="#"><img src="assets/images/portfolio/game.png"></a>
-        <a href="#"><img src="assets/images/portfolio/safe.png"></a>
-        <a href="#"><img src="assets/images/portfolio/submarine.png"></a>
+        <a href="#"><img src="assets/images/portfolio/cabin.png" alt=""></a>
+        <a href="#"><img src="assets/images/portfolio/cake.png" alt=""></a>
+        <a href="#"><img src="assets/images/portfolio/circus.png" alt=""></a>
+        <a href="#"><img src="assets/images/portfolio/game.png" alt=""></a>
+        <a href="#"><img src="assets/images/portfolio/safe.png" alt=""></a>
+        <a href="#"><img src="assets/images/portfolio/submarine.png" alt=""></a>
       </div>
     </section>
     <section class="about">
       <h2>ABOUT</h2>
-      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <div>
+        <hr class="line">
+        <i class="flaticon-star"></i>
+        <hr class="line">
+      </div>
       <div class="text">
         <div class="textLeft">
           <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
@@ -60,7 +68,11 @@
     </section>
     <section class="contactMe">
       <h2>CONTACT ME</h2>
-      <div><hr class="line"></hr><i class="flaticon-star"></i><hr class="line"></hr></div>
+      <div>
+        <hr class="line">
+        <i class="flaticon-star"></i>
+        <hr class="line">
+      </div>
       <form>
         <div class="contactTags">
           <label>Name</label><br>
