--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       </ul>
     </nav>
     <header>
-      <img src="assets/images/profile.png">
+      <img src="assets/images/profile.png" alt="">
       <p class="p1">START BOOTSTRAP</p>
-      <div><hr class="line"><i class="flaticon-star"></i><hr class="line"></div>
+      <div>
+        <hr class="line">
+        <i class="flaticon-star"></i>
+        <hr class="line"></div>
       <p class="p2">Web Developer - Graphic Artist - User Experience Designer</p>
     </header>
     <section class="portfolio">
@@ -120,4 +123,4 @@
       <p>Copyright © Your Website 2017</p>
     </div>
   </body>
-<html>
+</html>
